# danmaku-rs

./: .gitignore  Cargo.toml  config.toml  linux.sh  livers.toml  macos.sh  readme.md  windows.ps1
.github/workflows/: rust.yml
src/: client.rs  config.rs  logger.rs  login.rs  main.rs  packet.rs  storage.rs  task_manager.rs
