[package]
name = "bilibili"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
reqwest = { version = "0.11", features = [
    "cookies",
    "json",
    "gzip",
    "deflate",
    "stream",
] }
flate2 = "1.0"
brotli = "3"
regex = "1"
tokio-tungstenite = "0.21"
tokio-native-tls = "0.3"
bytes = "1"
log4rs = "1"
toml = "0.8"

dashmap = "6"
anyhow = "1.0"

rsa = "0.9"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
qrcode = "0.12"

tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "mysql",
    "postgres",
    "sqlite",
    "json",
] }
tokio-util = { version = "0.7" }
futures-util = { version = "0.3" }
url = "2"
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
